2008-05-21  Jaroslav Hajek <highegg@gmail.com>

	* dMatrix.cc, CMatrix.cc, Sparse-op-defs.h: Add missing copyright.

	* Sparse-op-defs.h (SPARSE_FULL_MUL): Simplify scalar*matrix case.
	Correct indenting. 
	(SPARSE_FULL_TRANS_MUL): New macro.
	(FULL_SPARSE_MUL): Simplify scalar*matrix case. Correct indenting.
	Move OCTAVE_QUIT one level up.
	(FULL_SPARSE_MUL_TRANS): New macro.
	* dSparse.h (mul_trans, trans_mul): Provide decl.
	* dSparse.cc (mul_trans, trans_mul): New functions.
	* CSparse.h (mul_trans, trans_mul, mul_herm, herm_mul): Provide decl.
	* CSparse.cc (mul_trans, trans_mul, mul_herm, herm_mul): New functions.

	* dMatrix.h (xgemm): Provide decl.
	* dMatrix.cc (xgemm): New function.
	(operator * (const Matrix&, const Matrix&)): Simplify.
	(get_blas_trans_arg): New function.
	* CMatrix.h (xgemm): Provide decl.
	* CMatrix.cc (xgemm): New function.
	(operator * (const ComplexMatrix&, const ComplexMatrix&)): Simplify.
	(get_blas_trans_arg): New function.

	* MatrixType.cc (matrix_real_probe, matrix_complex_probe):
	New template functions.
	(MatrixType::MatrixType (const Matrix&),
	MatrixType::MatrixType (const FloatMatrix&)):
	just call matrix_real_probe.
	(MatrixType::MatrixType (const ComplexMatrix&),
	MatrixType::MatrixType (const FloatComplexMatrix&)):
	just call matrix_complex_probe.

	* MatrixType.cc (MatrixType::MatrixType (matrix_type, bool)):
	add missing test for Unknown.

2008-05-21  David Bateman  <dbateman@free.fr>

	* fCMatrix.cc (float rcond): Replace with float rcon everywhere
	to avoid shadowed variable warning
	(float ComplexMatrix::rcond (void) const): New method for
	reciprocal condition number calculation.
	(float ComplexMatrix::rcond (MatrixType &mattype) const): ditto.
	* fCMatrix.h (float rcond):  Replace with float rcon everywhere
	to avoid shadowed variable warning
	(float ComplexMatrix::rcond (void) const): New method for
	reciprocal condition number calculation.
	(float ComplexMatrix::rcond (MatrixType &mattype) const): ditto.